<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginBottom="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="#f6dde4"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/thumnail1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/thumbnail"
                android:maxWidth="100dp"
                android:maxHeight="100dp"
                android:src="@drawable/cart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/name1"
                android:layout_width="101dp"
                android:layout_height="17dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/product_name"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/price1"
                app:layout_constraintEnd_toStartOf="@+id/increase"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/thumnail1"
                app:layout_constraintTop_toTopOf="@+id/thumnail1" />

            <TextView
                android:id="@+id/price1"
                android:layout_width="105dp"
                android:layout_height="18dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="64dp"
                android:text="@string/init_val"
                android:textColor="#F65252"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/thumnail1"
                app:layout_constraintTop_toBottomOf="@+id/name1" />

            <TextView
                android:id="@+id/sum"
                android:layout_width="98dp"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/init_val"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/thumnail1"
                app:layout_constraintTop_toBottomOf="@+id/number_of_products"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/number_of_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name1">

            </LinearLayout>

            <ImageButton
                android:id="@+id/increase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button"
                android:padding="0dp"
                android:scaleType="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/number_of_products"
                app:layout_constraintHorizontal_bias="0.644"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.192"
                app:srcCompat="@drawable/ic_baseline_add_24" />

            <ImageButton
                android:id="@+id/decrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button"
                android:padding="0dp"
                android:scaleType="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.647"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.712"
                app:srcCompat="@drawable/ic_baseline_remove_24" />

            <TextView
                android:id="@+id/quality"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/Quantity"
                app:layout_constraintBottom_toTopOf="@+id/decrease"
                app:layout_constraintEnd_toStartOf="@+id/sum"
                app:layout_constraintHorizontal_bias="0.827"
                app:layout_constraintStart_toEndOf="@+id/thumnail1"
                app:layout_constraintTop_toBottomOf="@+id/increase"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>